# AnomalyDetector

./: AnomalyDetector.h  CMakeLists.txt  MainTrain.cpp  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  anomaly_detection_util2.cpp  ass1.cpp  dove  hamor  hatol  kabel.c  main  main.cpp  minCircle.cpp  minCircle.h  tempCodeRunnerFile  testFile1.csv  timeseries.cpp  timeseries.h  trainFile1.csv
ex3/: CMakeLists.txt  HybridAnomalyDetector.h  SimpleAnomalyDetector.h
ex4/: CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  commands.h  timeseries.h
